--- a/springTeamProject/.classpath
+++ b/springTeamProject/.classpath
@@ -32,12 +32,9 @@
 	</classpathentry>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8">
 		<attributes>
+			<attribute name="module" value="true"/>
 			<attribute name="maven.pomderived" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="C:/ora/Cloud/oraclepki.jar"/>
-	<classpathentry kind="lib" path="C:/ora/Cloud/osdt_cert.jar"/>
-	<classpathentry kind="lib" path="C:/ora/Cloud/osdt_core.jar"/>
-	<classpathentry kind="lib" path="C:/ora/Cloud/ojdbc8.jar"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
