이클립스 머지 테스트

--- a/springTeamProject/.settings/org.eclipse.core.resources.prefs
+++ b/springTeamProject/.settings/org.eclipse.core.resources.prefs
@@ -1,2 +1,6 @@
+=\=\=\=\=\=\=
+<<<<<<<=HEAD
+>>>>>>>=bm_login
 eclipse.preferences.version=1
 encoding//src/main/webapp/WEB-INF/views/admin/adminMain.jsp=UTF-8
+encoding//src/main/webapp/WEB-INF/views/home.jsp=UTF-8
