0906 ckeditor4 적용완료, 파일첨부구현 db테이블에 추가필요

--- a/springTeamProject/src/main/webapp/WEB-INF/web.xml
+++ b/springTeamProject/src/main/webapp/WEB-INF/web.xml
@@ -31,7 +31,7 @@
 	</servlet-mapping>
 	
 	<!-- 한글깨짐 방지 -->
-		<filter>
+	<filter>
 		<filter-name>encoding</filter-name>
 		<filter-class>org.springframework.web.filter.CharacterEncodingFilter
 		</filter-class>
@@ -39,10 +39,16 @@
 			<param-name>encoding</param-name>
 			<param-value>UTF-8</param-value>
 		</init-param>
+		<init-param>
+			<param-name>forceEncoding</param-name>
+			<param-value>true</param-value>
+		</init-param>
 	</filter>
 
 	<filter-mapping>
 		<filter-name>encoding</filter-name>
 		<servlet-name>appServlet</servlet-name>
+		<url-pattern>*.do</url-pattern>
+		<url-pattern>/*</url-pattern>
 	</filter-mapping>
 </web-app>
