--- a/springTeamProject/src/main/webapp/WEB-INF/web.xml
+++ b/springTeamProject/src/main/webapp/WEB-INF/web.xml
@@ -51,4 +51,13 @@
 		<url-pattern>*.do</url-pattern>
 		<url-pattern>/*</url-pattern>
 	</filter-mapping>
+	
+	
+	<mime-mapping>
+    <extension>ico</extension>
+    <mime-type>image/x-icon</mime-type>
+</mime-mapping>
+	
+	
+	
 </web-app>
