--- a/springTeamProject/.settings/org.eclipse.core.resources.prefs
+++ b/springTeamProject/.settings/org.eclipse.core.resources.prefs
@@ -3,6 +3,7 @@
 >>>>>>>=bm_login
 eclipse.preferences.version=1
 encoding//src/main/java/sol/one/controller/HomeController.java=UTF-8
+encoding//src/main/java/sol/one/controller/MemController.java=UTF-8
 encoding//src/main/java/sol/one/controller/WriteController.java=UTF-8
 encoding//src/main/webapp/WEB-INF/views/admin/adminMain.jsp=UTF-8
 encoding//src/main/webapp/WEB-INF/views/home.jsp=UTF-8
