관심상품 관련해 반영 안된 것 등 수정. 댓글 CSS 수정. 상품등록 할인율 계산 오류 수정
댓글이 팀DB에서 작동을 안해, 수정한거 실행 확인은 못함

--- a/springTeamProject/src/main/webapp/WEB-INF/web.xml
+++ b/springTeamProject/src/main/webapp/WEB-INF/web.xml
@@ -57,6 +57,15 @@
     <extension>ico</extension>
     <mime-type>image/x-icon</mime-type>
 </mime-mapping>
+
+
+  <!-- Error Page -->	
+<error-page>
+		<error-code>400</error-code>
+				<location>/WEB-INF/views/errorPage.jsp</location>
+					</error-page>
+
+
 	
 	
 </web-app>
