광고에 이미지 2개 추가, 사이트사용법 페이지추가, 사용법 이미지9개추가, css 조절 모르겠음

--- a/springTeamProject/.settings/org.eclipse.core.resources.prefs
+++ b/springTeamProject/.settings/org.eclipse.core.resources.prefs
@@ -5,5 +5,6 @@ eclipse.preferences.version=1
 encoding//src/main/java/sol/one/controller/HomeController.java=UTF-8
 encoding//src/main/java/sol/one/controller/MemController.java=UTF-8
 encoding//src/main/java/sol/one/controller/WriteController.java=UTF-8
+encoding//src/main/webapp/WEB-INF/views/HowToUse.jsp=UTF-8
 encoding//src/main/webapp/WEB-INF/views/admin/adminMain.jsp=UTF-8
 encoding//src/main/webapp/WEB-INF/views/write.jsp=UTF-8
